--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -125,7 +125,7 @@ $modal-card-title-color: #fff
 html
   background-color: $lt-blue-100
   padding: 0
-  margin: #{($column-gap * 1)} 0 0 0 // offset for navbar
+  margin: 0 // offset for navbar
 
 body
   font-family: $family-sans-serif
@@ -172,10 +172,15 @@ h1, h2, .day_header
 
 /* Navbar, Dropdowns and Buttons */
 
-.navbar-brand
-  flex-grow: 1
-  align-content: stretch
-  img
+.nav
+  background-color: $navbar-background-color
+  position: sticky
+  top: 0
+  left: 0
+  width: 100%
+  z-index: 5
+  min-height: 70px
+  .logo
     margin-top: 5px
     height: auto
     max-width: 100px
@@ -224,13 +229,13 @@ button
 
 .box_filters
   display: grid
-  width: 33.3%
-  grid-template-columns: minmax(200px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr)
+
+  width: 100%
+  margin: auto 0
+  grid-template-columns: 1fr 1fr min-content
   grid-gap: #{($column-gap * .5)}
-  margin-top: #{($column-gap * .5)}
-  margin-left: auto
-  margin-right: auto
-  padding: #{($column-gap * 1)} #{($column-gap * 0)} 0px #{($column-gap * 0)}
+  .field:not(:last-child)
+    margin-bottom: 0
 
 .table_row
   display: flex
@@ -319,7 +324,7 @@ button
 
 .tally
   color: $lt-blue-100
-
+  min-width: 15ch
 
 /* Modal custom styles */
 
@@ -441,6 +446,8 @@ select
   :root
     font-size: .8rem
     // line-height: 1.3
+  .nav .logo
+    max-width: 70px
   input, select, textarea
     font-size: 1rem // stops ios safari zooming in on inputs and not zooming out when done
   .day_header
@@ -455,11 +462,10 @@ select
       //width: 100%
     &.task_col_4
       padding-right: #{($column-gap * 1)}
-  .box_filters
-    grid-template-columns: minmax(100px, 2fr) minmax(100px, 2fr) minmax(50px, 1fr)
   .box_sheet
     padding: #{($column-gap * 1)} #{($column-gap * 0)} #{($column-gap * 1)} #{($column-gap * 0)}
-
+  .box_filters
+    width: 200px
   .columns
     margin: 0
     overflow-x: hidden
