--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,6 +1,14 @@
 @charset "UTF-8";
 /*! bulma.io v0.9.1 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
+@-webkit-keyframes spinAround {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
 @keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -114,7 +122,8 @@
 }
 
 .control.is-loading::after, .select.is-loading::after, .loader, .button.is-loading::after {
-  animation: spinAround 500ms infinite linear;
+  -webkit-animation: spinAround 500ms infinite linear;
+          animation: spinAround 500ms infinite linear;
   border: 2px solid #dbdbdb;
   border-radius: 290486px;
   border-right-color: transparent;
@@ -295,7 +304,10 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   text-rendering: optimizeLegibility;
-  text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+     -moz-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+          text-size-adjust: 100%;
 }
 
 article,
@@ -2101,10 +2113,14 @@ a.box:active {
   background-image: linear-gradient(to right, #f14668 30%, #ededed 30%);
 }
 .progress:indeterminate {
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-name: moveIndeterminate;
-  animation-timing-function: linear;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-name: moveIndeterminate;
+          animation-name: moveIndeterminate;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
   background-color: #ededed;
   background-image: linear-gradient(to right, #4a4a4a 30%, #ededed 30%);
   background-position: top left;
@@ -2128,6 +2144,15 @@ a.box:active {
 }
 .progress.is-large {
   height: 1.5rem;
+}
+
+@-webkit-keyframes moveIndeterminate {
+  from {
+    background-position: 200% 0;
+  }
+  to {
+    background-position: -200% 0;
+  }
 }
 
 @keyframes moveIndeterminate {
@@ -7493,6 +7518,8 @@ label.panel-block:hover {
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
+  min-height: -webkit-min-content;
+  min-height: -moz-min-content;
   min-height: min-content;
 }
 .tile.is-ancestor {
@@ -10251,6 +10278,7 @@ h1, h2, .day_header {
 /* Navbar, Dropdowns and Buttons */
 .nav {
   background-color: #0080f5;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
@@ -10344,6 +10372,7 @@ a.dropdown-item, button.dropdown-item {
   display: grid;
   width: 100%;
   margin: auto 0;
+  grid-template-columns: 1fr 1fr -webkit-min-content;
   grid-template-columns: 1fr 1fr min-content;
   grid-gap: 0.25rem;
 }
@@ -10467,6 +10496,16 @@ a.dropdown-item, button.dropdown-item {
 
 .modal-card {
   box-shadow: 0px 0px 0.5rem rgba(67, 165, 255, 0.3), 0px 0px 2px rgba(83, 104, 110, 0.1);
+}
+
+.form_error {
+  height: 100%;
+  display: flex;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+}
+.form_error p {
+  margin: auto 0;
 }
 
 /* DateRangePicker custom styles */
@@ -10643,3 +10682,5 @@ select {
     overflow-x: hidden;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
