--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -361,6 +361,16 @@ a.dropdown-item, button.dropdown-item
   border-radius: 6px
 .modal-card
   box-shadow: 0px 0px #{($column-gap / 1)} rgba($lt-blue-900, .3), 0px 0px 2px rgba($dk-gray-500, .1)
+
+.form_error
+  height: 100%
+  display: flex
+  padding-top: .2rem
+  padding-bottom: .2rem
+  p
+    margin: auto 0
+
+
 /* DateRangePicker custom styles */
 
 .daterangepicker .drp-buttons .btn
