--- a/guts/css/style.css
+++ b/guts/css/style.css
@@ -10255,6 +10255,20 @@ img {
   display: none;
 }
 
+html {
+  -webkit-scroll-snap-type: y mandatory;
+      -ms-scroll-snap-type: y mandatory;
+          scroll-snap-type: y mandatory;
+}
+
+.day_header {
+  scroll-snap-align: start;
+}
+
+.nav + .container {
+  margin-top: 1rem;
+}
+
 /* Headings */
 h1, h2, .day_header {
   font-size: 1.5rem;
@@ -10357,8 +10371,8 @@ a.dropdown-item, button.dropdown-item {
 /* Layout */
 .day_header {
   width: 100%;
-  padding: 1rem 0 0.75rem 2.5rem;
-  margin: 2rem 0 0 0;
+  padding: 3.5rem 0 0.75rem 2.5rem;
+  margin: 0rem 0 0 0;
   cursor: pointer;
   border-bottom: 1px solid #dce2e4;
 }
@@ -10378,7 +10392,7 @@ a.dropdown-item, button.dropdown-item {
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
   margin: 0px 0px 0.5rem 0px;
-  padding: 1rem 0px 0px 0px;
+  padding: 0rem 0px 0px 0px;
   box-shadow: 0px 0px 0.25rem rgba(143, 201, 255, 0.3), 0px 0px 1px rgba(83, 104, 110, 0.1);
 }
 
@@ -10641,7 +10655,8 @@ select {
 /* Pagination */
 .page_number {
   text-align: right;
-  padding: 0 1rem;
+  padding: 1rem 1rem 0 0;
+  margin-bottom: -1rem;
   color: #cce7ff;
 }
 
