--- a/guts/css/style.sass
+++ b/guts/css/style.sass
@@ -154,6 +154,15 @@ img
 .hide
   display: none
 
+html
+  scroll-snap-type: y mandatory
+
+.day_header
+  scroll-snap-align: start
+
+.nav + .container
+  margin-top: 1rem
+
 /* Headings */
 
 h1, h2, .day_header
@@ -242,8 +251,8 @@ a.dropdown-item, button.dropdown-item
 
 .day_header
   width: 100%
-  padding: #{($column-gap * 2)} 0 #{($column-gap * 1.5)} #{($column-gap * 5)}
-  margin: #{($column-gap * 4)} 0 0 0
+  padding: #{($column-gap * 7)} 0 #{($column-gap * 1.5)} #{($column-gap * 5)}
+  margin: #{($column-gap * 0)} 0 0 0
   cursor: pointer
   border-bottom: 1px solid $lt-gray-400
   .pretty_date
@@ -259,7 +268,7 @@ a.dropdown-item, button.dropdown-item
   border-bottom-left-radius: #{($column-gap / 2)}
   border-bottom-right-radius: #{($column-gap / 2)}
   margin: 0px 0px #{($column-gap * 1)} 0px
-  padding: #{($column-gap * 2)} 0px 0px 0px
+  padding: #{($column-gap * 0)} 0px 0px 0px
   box-shadow: 0px 0px #{($column-gap / 2)} rgba($lt-blue-600, .3), 0px 0px 1px rgba($dk-gray-500, .1)
 
 .box_filters
@@ -479,7 +488,8 @@ select
 
 .page_number
   text-align: right
-  padding: 0 #{($column-gap * 2)}
+  padding: #{($column-gap * 2)} #{($column-gap * 2)} 0 0
+  margin-bottom: #{ 0 - ($column-gap * 2)}
   color: $lt-blue-300
 
 
